--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,20 +1,16 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>Django's blog</title>
-</head>
-<body>
-    <div>
-        <h1><a href="/"> Django's Blog App</a></h1>
-    </div>
-    {% for post in posts %}
-    <div>
-        <p>Published Date : {{post.published_date | date:"Y-m-d a g:i"}}</p>
-        <h2><a href="">{{post.title}}</a> </h2>
-        <p>{{post.text|linebreaksbr}}</p>
-    </div>
-    {% endfor %}
+{% extends 'blog/base.html' %}
 
-</body>
-</html>
+{% block content %}
+
+    {% for post in posts %}
+    <div class="post">
+        <div class="date">
+            Published Date : {{post.published_date | date:"Y-m-d a g:i"}}
+        </div>
+        <h2><a href="">{{ post.title}}</a></h2>
+        <p>{{ post.text|linebreaksbr}}</p>
+    </div>
+
+    {% endfor%}
+
+{% endblock%}
