--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,10 +4,12 @@
 
     {% for post in posts %}
     <div class="post">
+        {%if post.published_date%}
         <div class="date">
             Published Date : {{post.published_date | date:"Y-m-d a g:i"}}
         </div>
-        <h2><a href="{% url 'post_detail' pk=post.id %}">{{ post.title}}</a></h2>
+        {% endif %}
+        <h2><a href="{% url 'post_detail' pk=post.id %}">{{post.title}}</a></h2>
     </div>
 
     {% endfor%}
